--- a/Slack 1/index.html
+++ b/Slack 1/index.html
@@ -21,9 +21,9 @@
     <header class="header">
         <div class="contenedor">
             <a href="#">
-                <img src="assets/v1033-a-19-b.jpg" alt="logo" class="img">
+                <img src="assets/Logo.png" alt="logo" class="img">
             </a>
-            <h1 class="encabezado">Banco Innovación Bancaria
+            <h1 class="encabezado">Banco Innovación Financiera
         </div>
         </h1>
     </header>
