--- a/Slack 1/index.html
+++ b/Slack 1/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Maqueta HTML5</title>
+    <title>Banco Innovación Financiera</title>
+
+
 
     <!-- Links -->
     <link rel="stylesheet" href="styles.css">
@@ -13,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+    <link rel="icon" href="assets/Logo.ico">
 
 </head>
 
@@ -29,13 +31,21 @@
     </header>
 
     <nav class="nav">
-        <h2 class="navbar">Menú</h2>
+        <h3 class="navbar">Menú</h3>
         <ul class="menu">
             <li><a href="index.html" class="li">Inicio</a></li>
             <li><a href="pages/cuentas.html" class="li">Cuentas</a></li>
             <li><a href="pages/tranferencias.html" class="li">Transferencias</a></li>
             <li><a href="pages/pagos.html" class="li">Pagos</a></li>
         </ul>
+
+        <div class="contenedorf">
+            <h3 class="navbar">Funciones</h3>
+            <ul class="menu">
+                <li><a href="pages/moneda.html" class="li">Conversion de moneda</a></li>
+                <li><a href="pages/prestamos.html" class="li">Calculadora de prestamos</a></li>
+            </ul>
+        </div>
     </nav>
 
     <main class="main">
