--- a/Slack 1/pages/tranferencias.html
+++ b/Slack 1/pages/tranferencias.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Maqueta HTML5</title>
+    <title>Banco Innovacion Financiera</title>
 
     <!-- Links -->
     <link rel="stylesheet" href="../styles.css">
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="icon" href="../assets/Logo.ico">
 
 
 </head>
@@ -29,17 +30,25 @@
     </header>
 
     <nav class="nav">
-        <h2 class="navbar">Menú</h2>
+        <h3 class="navbar">Menú</h3>
         <ul class="menu">
             <li><a href="../index.html" class="li">Inicio</a></li>
             <li><a href="cuentas.html" class="li">Cuentas</a></li>
             <li><a href="tranferencias.html" class="li">Transferencias</a></li>
             <li><a href="pagos.html" class="li">Pagos</a></li>
         </ul>
+
+        <div class="contenedorf">
+            <h3>Funciones</h3>
+            <ul class="menu">
+                <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
+                <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+            </ul>
+        </div>
     </nav>
 
     <main class="main">
-        <h1>Transferencias</h1>
+        <h2>Transferencias</h2>
         </div>
     </main>
 
