--- a/Slack 1/index.html
+++ b/Slack 1/index.html
@@ -16,6 +16,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="assets/Logo.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 
@@ -30,36 +32,23 @@
         </div>
     </header>
 
-    <nav class="nav">
-        <h3 class="navbar">Menú</h3>
-        <ul class="menu">
-            <li><a href="index.html" class="li">Inicio</a></li>
-            <li><a href="pages/cuentas.html" class="li">Cuentas</a></li>
-            <li><a href="pages/tranferencias.html" class="li">Transferencias</a></li>
-            <li><a href="pages/pagos.html" class="li">Pagos</a></li>
-        </ul>
-
-        <div class="contenedorf">
-            <h3 class="navbar">Funciones</h3>
-            <ul class="menu">
-                <li><a href="pages/moneda.html" class="li">Conversion de moneda</a></li>
-                <li><a href="pages/prestamos.html" class="li">Calculadora de prestamos</a></li>
-            </ul>
-        </div>
-    </nav>
 
     <main class="main">
         <div class="contenedorM">
             <h2 class="sesion">Iniciar Sesión</h2>
-            <form action="">
-                <label for="user">Usuario</label>
-                <input type="text" name="usuario" id="user" class="inputField">
+            <form action="" id="loginForm">
+                <label for="user" class="form-label">Usuario</label>
+                <input type="text" name="usuario" id="user" class="form-control">
+                <div class="form-text">Ingrese un email valido</div>
 
-                <label for="password">Contraseña</label>
-                <input type="password" name="contraseña" id="password" class="inputField">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" name="contraseña" id="password" class="form-control"
+                    aria-describedby="descriptionP">
+                <div id="descriptionP" class="form-text">Ingrese una contraseña con 8 caracteres</div>
 
-                <input type="submit" name="Enviar" id="submit" class="inputSubmit">
+                <button type="submit" name="Enviar" id="submit" class="btn btn-primary mt-4">Enviar</button>
             </form>
+
         </div>
     </main>
 
@@ -78,25 +67,24 @@
             </div>
 
             <div class="cajaIcons">
-                <h3>Redes Sociales</h3>
                 <a href="#" class="aIcon animate__pulse">
-                    Instagram
                     <i class='bx bxl-instagram'></i>
                 </a>
                 <a href="#" class="aIcon">
-                    Facebook
                     <i class='bx bxl-facebook-circle'></i>
                 </a>
                 <a href="#" class="aIcon">
-                    Twitter
                     <i class='bx bxl-twitter'></i>
+                </a>
+                <a href="#" class="aIcon">
+                    <i class='bx bxl-whatsapp'></i>
                 </a>
             </div>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="./script.js"></script>
+    <script src="scripts/script.js" type="text/javascript"></script>
 </body>
 
 </html>
