--- a/Slack 1/pages/cuentas.html
+++ b/Slack 1/pages/cuentas.html
@@ -14,6 +14,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="../assets/Logo.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
 </head>
@@ -24,33 +26,98 @@
             <a href="#">
                 <img src="../assets/Logo.png" alt="logo" class="img">
             </a>
-            <h1 class="encabezado">Banco Innovación Financiera
+            <h1 class="encabezado">Banco Innovación Financiera</h1>
+            <a href="../index.html" class="logout"><i class='bx bx-log-out'></i></a>
         </div>
-        </h1>
     </header>
 
-    <nav class="nav">
-        <h3 class="navbar">Menú</h3>
-        <ul class="menu">
-            <li><a href="../index.html" class="li">Inicio</a></li>
-            <li><a href="cuentas.html" class="li">Cuentas</a></li>
-            <li><a href="tranferencias.html" class="li">Transferencias</a></li>
-            <li><a href="pagos.html" class="li">Pagos</a></li>
-        </ul>
 
-        <div class="contenedorf">
-            <h3>Funciones</h3>
-            <ul class="menu">
-                <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
-                <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+    <div class="contenedorNyM">
+
+        <nav class="navP">
+            <h3 class="navbarP">Menú</h3>
+            <ul class="menuP">
+                <li><a href="inicio.html" class="li">Inicio</a></li>
+                <li><a href="cuentas.html" class="li">Cuentas</a></li>
+                <li><a href="tranferencias.html" class="li">Transferencias</a></li>
+                <li><a href="pagos.html" class="li">Pagos</a></li>
             </ul>
-        </div>
-    </nav>
 
-    <main class="main">
+            <div class="contenedorf">
+                <h3>Funciones</h3>
+                <ul class="menu">
+                    <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
+                    <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+                </ul>
+            </div>
+        </nav>
 
-        <h1>Cuentas</h1>
-    </main>
+        <main class="main">
+
+            <div class="containerCuenta w-xl">
+                <table class="table table-hover" id="table">
+                    <tr>
+                        <th class="table-dark">Número de Cuenta</th>
+                        <th class="table-dark">Titular de la Cuenta</th>
+                        <th class="table-dark">Saldo</th>
+                        <th class="table-dark">Tipo de Cuenta</th>
+                    </tr>
+                    <tr>
+                        <td>123456789</td>
+                        <td>John Doe</td>
+                        <td>$10000</td>
+                        <td>Cuenta de Ahorros</td>
+                    </tr>
+                    <tr>
+                        <td>987654321</td>
+                        <td>Jane Smith</td>
+                        <td>$5500</td>
+                        <td>Cuenta Corriente</td>
+                    </tr>
+                    <tr>
+                        <td>555555555</td>
+                        <td>Michael Johnson</td>
+                        <td>$2300</td>
+                        <td>Cuenta de Ahorros</td>
+                    </tr>
+                </table>
+
+                <form id="formAccount">
+                    <h3 class="text-center mt-3">Agregar Cuenta</h3>
+                    <div class="mb-3">
+                        <label for="numberAccount" class="form-label">Numero de Cuenta</label>
+                        <input type="number" class="form-control" id="numberAccount" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">Deben ser de 9 numeros</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="nameAccount" class="form-label">Nombre de la Cuenta</label>
+                        <input type="text" class="form-control" id="nameAccount">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="balance" class="form-label">Saldo de la Cuenta</label>
+                        <input type="number" class="form-control" id="balance">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="choices" class="form-label">Elija el tipo de cuenta</label>
+                        <select class="form-select" aria-label="" id="choices">
+                            <option selected>Cuenta de Ahorro</option>
+                            <option value="1">Cuenta Corriente</option>
+                            <option value="2">Cuenta de Mercado Monetario</option>
+                            <option value="3">Cuenta de Jubilación Individual</option>
+                            <option value="4">Cuenta Comercial</option>
+                            <option value="5">Cuenta Nómina</option>
+                        </select>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary mt-4">Submit</button>
+                </form>
+
+            </div>
+
+        </main>
+    </div>
 
     <footer class="footer">
         <div class="container">
@@ -67,25 +134,28 @@
             </div>
 
             <div class="cajaIcons">
-                <h3>Redes Sociales</h3>
                 <a href="#" class="aIcon animate__pulse">
-                    Instagram
                     <i class='bx bxl-instagram'></i>
                 </a>
                 <a href="#" class="aIcon">
-                    Facebook
                     <i class='bx bxl-facebook-circle'></i>
                 </a>
                 <a href="#" class="aIcon">
-                    Twitter
                     <i class='bx bxl-twitter'></i>
+                </a>
+                <a href="#" class="aIcon">
+                    <i class='bx bxl-whatsapp'></i>
                 </a>
             </div>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="../script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="../scripts/cuenta.js"></script>
+
 </body>
 
 </html>
