--- a/Slack 1/pages/moneda.html
+++ b/Slack 1/pages/moneda.html
@@ -14,6 +14,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="../assets/Logo.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
 </head>
@@ -24,53 +26,56 @@
             <a href="#">
                 <img src="../assets/Logo.png" alt="logo" class="img">
             </a>
-            <h1 class="encabezado">Banco Innovación Financiera
+            <h1 class="encabezado">Banco Innovación Financiera</h1>
+            <a href="../index.html" class="logout"><i class='bx bx-log-out'></i></a>
         </div>
-        </h1>
     </header>
 
-    <nav class="nav">
-        <h2 class="navbar">Menú</h2>
-        <ul class="menu">
-            <li><a href="../index.html" class="li">Inicio</a></li>
-            <li><a href="cuentas.html" class="li">Cuentas</a></li>
-            <li><a href="tranferencias.html" class="li">Transferencias</a></li>
-            <li><a href="pagos.html" class="li">Pagos</a></li>
-        </ul>
+    <div class="contenedorNyM">
 
-        <div class="contenedorf">
-            <h2>Funciones</h2>
+        <nav class="navP">
+            <h2 class="navbarP">Menú</h2>
             <ul class="menu">
-                <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
-                <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+                <li><a href="inicio.html" class="li">Inicio</a></li>
+                <li><a href="cuentas.html" class="li">Cuentas</a></li>
+                <li><a href="tranferencias.html" class="li">Transferencias</a></li>
+                <li><a href="pagos.html" class="li">Pagos</a></li>
             </ul>
-        </div>
-    </nav>
 
-    <main class="main moneda">
-        <h2 class="tituloMoneda">Conversor de moneda</h2>
+            <div class="contenedorf">
+                <h2>Funciones</h2>
+                <ul class="menu">
+                    <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
+                    <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+                </ul>
+            </div>
+        </nav>
 
-        <div class="containerM">
-            <form action="" class="containerForm">
-                <label for="moneda">Ingrese cantidad que quiere convertir</label>
-                <input type="number" class="inputMoneda" name="moneda" id="moneda" step="0.1" placeholder="0">
+        <main class="main moneda">
+            <h2 class="tituloMoneda">Conversor de moneda</h2>
 
-                <div class="options">
-                    <label for="currency">Moneda de destino</label>
-                    <select name="" id="currency">
-                        <option value="DOLAR BLUE">DOLAR BLUE</option>
-                        <option value="EUR">EURO</option>
-                        <option value="DOLAR" data-image="../">DOLAR OFICIAL</option>
-                        <option value="RENMIBINI">YUAN</option>
-                        <option value="RUBLO">RUBLO</option>
-                    </select>
-                    <button id="result" type="button">Convertir</button>
-                    <div id="resultBox"></div>
-                </div>
-            </form>
+            <div class="containerM">
+                <form action="" class="containerForm">
+                    <label for="moneda">Ingrese cantidad de pesos que quiere convertir</label>
+                    <input type="number" class="inputMoneda" name="moneda" id="moneda" step="0.1" placeholder="0">
 
-        </div>
-    </main>
+                    <div class="options">
+                        <label for="currency">Moneda de destino</label>
+                        <select name="" id="currency">
+                            <option value="DOLAR BLUE">DOLAR BLUE</option>
+                            <option value="EUR">EURO</option>
+                            <option value="DOLAR" data-image="../">DOLAR OFICIAL</option>
+                            <option value="RENMIBINI">YUAN</option>
+                            <option value="RUBLO">RUBLO</option>
+                        </select>
+                        <button class="buttonM" id="result" type="button">Convertir</button>
+                        <div id="resultBox"></div>
+                    </div>
+                </form>
+
+            </div>
+        </main>
+    </div>
 
     <footer class="footer">
         <div class="container">
@@ -87,26 +92,25 @@
             </div>
 
             <div class="cajaIcons">
-                <h3>Redes Sociales</h3>
                 <a href="#" class="aIcon animate__pulse">
-                    Instagram
                     <i class='bx bxl-instagram'></i>
                 </a>
                 <a href="#" class="aIcon">
-                    Facebook
                     <i class='bx bxl-facebook-circle'></i>
                 </a>
                 <a href="#" class="aIcon">
-                    Twitter
                     <i class='bx bxl-twitter'></i>
+                </a>
+                <a href="#" class="aIcon">
+                    <i class='bx bxl-whatsapp'></i>
                 </a>
             </div>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="/scripts/script.js"></script>
-    <script src="/scripts/moneda.js"></script>
+    <script src="../scripts/script.js" type="text/javascript"></script>
+    <script src="../scripts/moneda.js"></script>
 </body>
 
 </html>
