--- a/Slack 1/pages/pagos.html
+++ b/Slack 1/pages/pagos.html
@@ -14,6 +14,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="../assets/Logo.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
 
@@ -25,31 +27,90 @@
             <a href="#">
                 <img src="../assets/Logo.png" alt="logo" class="img">
             </a>
-            <h1 class="encabezado">Banco Innovación Financiera
+            <h1 class="encabezado">Banco Innovación Financiera</h1>
+            <a href="../index.html" class="logout"><i class='bx bx-log-out'></i></a>
         </div>
-        </h1>
     </header>
 
-    <nav class="nav">
-        <h3 class="navbar">Menú</h3>
-        <ul class="menu">
-            <li><a href="../index.html" class="li">Inicio</a></li>
-            <li><a href="cuentas.html" class="li">Cuentas</a></li>
-            <li><a href="tranferencias.html" class="li">Transferencias</a></li>
-            <li><a href="pagos.html" class="li">Pagos</a></li>
-        </ul>
+    <div class="contenedorNyM">
 
-        <div class="contenedorf">
-            <h3>Funciones</h3>
+        <nav class="navP">
+            <h3 class="navbar">Menú</h3>
             <ul class="menu">
-                <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
-                <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+                <li><a href="inicio.html" class="li">Inicio</a></li>
+                <li><a href="cuentas.html" class="li">Cuentas</a></li>
+                <li><a href="tranferencias.html" class="li">Transferencias</a></li>
+                <li><a href="pagos.html" class="li">Pagos</a></li>
             </ul>
-        </div>
-    </nav>
-    <main class="main">
-        <h1>Pagos</h1>
-    </main>
+
+            <div class="contenedorf">
+                <h3>Funciones</h3>
+                <ul class="menu">
+                    <li><a href="moneda.html" class="li">Conversion de Moneda</a></li>
+                    <li><a href="prestamos.html" class="li">Calculadora de Prestamos</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <main class="main mainPago">
+            <h2 class="text-center">Historial de Pagos</h2>
+
+            <div class="payment-grid">
+                <div class="payment-item">
+                    <h4 class="paymentTitle">Pago Mensual</h4>
+                    <p class="paragraphDate">Fecha de Pago: 2023-09-12</p>
+                    <p class="paragraphAmount">Monto: $500</p>
+                    <p class="paragraphDescription">Descripción: Alquiler mensual del apartamento</p>
+                </div>
+
+                <!-- Puedes agregar más elementos de pago aquí -->
+
+                <div class="payment-item">
+                    <h4 class="paymentTitle">Pago Mensual</h4>
+                    <p class="paragraphDate">Fecha de Pago: 2023-03-12</p>
+                    <p class="paragraphAmount">Monto: $500</p>
+                    <p class="paragraphDescription">Descripción: Alquiler mensual del apartamento</p>
+                </div>
+            </div>
+
+            <div class="formContainer">
+                <form id="formTransfer">
+                    <h3 class="text-center mt-5">Nuevo Pago</h3>
+
+                    <div class="mb-3">
+                        <label for="choices" class="form-label">Elija el tipo de pago</label>
+                        <select class="form-select" aria-label="" id="choices">
+                            <option selected>Pago Mensual</option>
+                            <option>Transferencias Bancarias</option>
+                            <option>Pago de Facturas</option>
+                            <option>Pagos de Préstamos</option>
+                            <option>Transferencias Internacionales:</option>
+                            <option>Pago de Impuestos</option>
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="date" class="form-label ">Fecha</label>
+                        <input type="date" class="form-control" id="date" aria-describedby="emailHelp">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="amount" class="form-label">Monto</label>
+                        <input type="number" class="form-control" id="amount">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Descripcion</label>
+                        <input type="text" class="form-control" id="description">
+                    </div>
+
+
+                    <button type="submit" class="btn btn-primary mt-4">Enviar</button>
+                </form>
+            </div>
+
+        </main>
+    </div>
 
     <footer class="footer">
         <div class="container">
@@ -66,25 +127,24 @@
             </div>
 
             <div class="cajaIcons">
-                <h3>Redes Sociales</h3>
-                <a href="#" class="aIcon animate__pulse">
-                    Instagram
+                <a target="_blank" href="https://www.instagram.com/" class="aIcon animate__pulse">
                     <i class='bx bxl-instagram'></i>
                 </a>
-                <a href="#" class="aIcon">
-                    Facebook
+                <a target="_blank" href="https://www.facebook.com/" class="aIcon">
                     <i class='bx bxl-facebook-circle'></i>
                 </a>
-                <a href="#" class="aIcon">
-                    Twitter
+                <a target="_blank" href="https://twitter.com/home" class="aIcon">
                     <i class='bx bxl-twitter'></i>
+                </a>
+                <a target="_blank" href="https://www.whatsapp.com/?lang=es_LA" class="aIcon">
+                    <i class='bx bxl-whatsapp'></i>
                 </a>
             </div>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="../script.js"></script>
+    <script src="../scripts/pagos.js"></script>
 </body>
 
 </html>
