--- a/Slack 1/pages/moneda.html
+++ b/Slack 1/pages/moneda.html
@@ -68,7 +68,7 @@
                             <option value="RENMIBINI">YUAN</option>
                             <option value="RUBLO">RUBLO</option>
                         </select>
-                        <button class="buttonM" id="result" type="button">Convertir</button>
+                        <button class="buttonM btn btn-primary" id="result" type="button">Convertir</button>
                         <div id="resultBox"></div>
                     </div>
                 </form>
