--- a/Slack 1/pages/prestamos.html
+++ b/Slack 1/pages/prestamos.html
@@ -69,7 +69,7 @@
                         <label for="años">Plazo del Préstamo (años):</label>
                         <input class="inputPrestamo" type="number" id="años" required>
                     </div>
-                    <button id="calculateButton">Calcular</button>
+                    <button type="button" class="btn btn-primary" id="calculateButton">Calcular</button>
 
                     <div id="result"></div>
                 </div>
